--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "sass": "^1.32.2"
   }
 }
